packages/lab/src/date-picker/DatePickerPanel.css
.saltDatePickerPanel {
  background: var(--salt-container-primary-background);
  border: var(--salt-size-border) var(--salt-selectable-borderStyle-selected) var(--salt-selectable-borderColor-selected);
  overflow: hidden;
  overflow-y: auto;
  position: relative;
  z-index: var(--salt-zIndex-popout);
  box-shadow: var(--salt-overlayable-shadow-popout);
  box-sizing: border-box;
  display: flex;
}
.saltDatePickerPanel-container {
  width: min-content;
  gap: 1px;
}

.saltDatePickerPanel-header {
  padding: var(--salt-spacing-100);
}

